[tool.poetry]
name = "easy-lm-trainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "easy_lm_trainer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
accelerate = "^0.18.0"
datasets = "^2.12.0"
frozenlist = "^1.3.3"
ordereduuid = "^0.5.0"
pandas = "<2"
requests = "^2.29.0"
scikit-learn = "<=1.2"
scipy = "<1.10"
tqdm = "^4.65.0"
transformers = "^4.28.1"
typed-argument-parser = "<1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
